<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif-black"

        android:text="@string/app_name"
        android:textColor="@color/secondaryLightColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_descricao"
        android:layout_width="221dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"

        android:text="App disponibilizado para análise de casos de Corona Virus."
        android:textColor="@color/secondaryLightColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/bot_o_para_acessar_a_pag_na_inicial"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#A8A8A8"
        android:shadowDx="20"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/entrar"
        android:textColor="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="42dp"
        android:contentDescription="@string/boneco_covid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logocovid_foreground" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/boneca_medica_covid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_medico_icon_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>