<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp">

     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         app:cardCornerRadius="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/secondaryColor">

             <TextView
                 android:id="@+id/dia"
                 android:layout_width="26dp"
                 android:layout_height="28dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="2dp"
                 android:contentDescription="@string/dia_do_boletim"
                 android:gravity="right"
                 android:text="10"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="20dp"
                 app:layout_constraintEnd_toStartOf="@+id/mes"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />

             <TextView
                 android:id="@+id/mes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:contentDescription="@string/m_s_do_boletim"
                 android:gravity="center"
                 android:text="JAN"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/ano"
                 app:layout_constraintEnd_toEndOf="parent" />

             <TextView
                 android:id="@+id/ano"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="7dp"
                 android:layout_marginBottom="4dp"
                 android:contentDescription="@string/ano_do_boletim"
                 android:gravity="center"
                 android:text="2020"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="8sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />

             <TextView
                 android:id="@+id/name"
                 android:layout_width="167dp"
                 android:layout_height="54dp"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="3dp"
                 android:gravity="center"
                 android:text="Rio Grande do Sul"
                 android:textColor="@color/primaryTextColor"
                 android:textFontWeight="@android:integer/config_longAnimTime"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.333"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.017" />

             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="4dp"
                 android:text="@string/casos"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="18dp"
                 app:layout_constraintEnd_toStartOf="@+id/cardView2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/name" />

             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="63dp"
                 android:layout_height="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@mipmap/ic_virus1_foreground" />

             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView2"
                 android:layout_width="101dp"
                 android:layout_height="39dp"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/secondaryDarkColor"
                 app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
                 app:layout_constraintTop_toBottomOf="@+id/name">

                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <TextView
                         android:id="@+id/nCases"
                         android:layout_width="100dp"
                         android:layout_height="39dp"
                         android:layout_marginStart="2dp"
                         android:text="000000"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="30dp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>

     </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>